--- a/frontend/src/components/LoginPopup/LoginPopup.css
+++ b/frontend/src/components/LoginPopup/LoginPopup.css
@@ -1,6 +1,6 @@
 .login-popup{
     position: absolute;
-    z-index: 9999;
+    z-index: 2147483648;
     width: 100%;
     height: 100%;
     background-color: #00000090;
